2001-09-11  Jim Wilson  <wilson@redhat.com>

	* alias.c (clear_reg_alias_info): Only handle pseudo registers.

2001-09-10  Tim Freeman <tim@fungibole.com>

	* dwarf2out.c (incomplete_types, decl_scope_table): Make them
	into varray's and register them as roots with the garbage
	collector so they are not collected too soon.  

2001-09-10  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.c (scc_eq_operand): New predicate.
	* config/rs6000/rs6000-protos.h: Declare it.
	* config/rs6000/rs6000.h (PREDICATE_CODES): Add it.
	* config/rs6000/rs6000.md (SCC eq:DI): Use it.
	* config/rs6000/t-aix43 (SHLIB_INSTALL): Use mode 751 (a+x,r-o).

2001-09-07  Jim Wilson  <wilson@redhat.com>

	* alias.c (clear_reg_alias_info): New.
	* flow.c (attempt_auto_inc): Call clear_reg_alias_info.
	* rtl.h (clear_reg_alias_info): Declare.

2001-09-06  Richard Henderson  <rth@redhat.com>

	* simplify-rtx.c (simplify_binary_operation): Revert last change.

2001-09-06  Richard Henderson  <rth@redhat.com>

	* simplify-rtx.c (simplify_binary_operation): Simplify contents
	of CONST.

2001-09-06  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* config/rs6000/rs6000.c (rs6000_emit_prologue): Fix DWARF2 register
	number used for CR register.

2001-09-06  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.c (mask_operand): Use signed vars to avoid
	compiler warnings.
	(mask64_operand): Likewise.
	(includes_rldic_lshift_p): Likewise.
	(includes_rldicr_lshift_p): Likewise.

2001-09-05  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.c (mask_operand): Rewrite without
	bit-shifting loop.
	(mask64_operand): Likewise.
	(rldic_operand): Delete.
	(includes_lshift64_p): Delete.
	(includes_rldic_lshift_p): New function.
	(includes_rldicr_lshift_p): New function.
	(print_operand): Don't call rldic_operand in case 'W'.
	* config/rs6000/rs6000-protos.h (rldic_operand): Remove.
	(includes_lshift64_p): Remove.
	(includes_rldic_lshift_p): Declare.