@@ -1,3 +1,8 @@
+2001-09-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20010403-1.c: New test.
+	* gcc.dg/20010912-1.c: New test.
+
 2001-09-06  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/3986
