@@ -1,3 +1,12 @@
+2001-09-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcse.c (gcse_main): Fix comment typo.
+	(delete_null_pointer_check): Likewise.
+	(hash_scan_set): Don't consider sets with REG_EQUIV MEM notes.
+	* cse.c (cse_insn): Likewise.
+	* function.c (fixup_var_refs_insns_with_hash): The sequence is
+	toplevel.
+
 2001-09-11  Jim Wilson  <wilson@redhat.com>
 
 	* alias.c (clear_reg_alias_info): Only handle pseudo registers.
